# MLOps-vehicle-analysis

./: .gitignore  404.html  Dockerfile  README.md  index.html  initial_values.yml  makefile  mkdocs.yml  pyproject.toml  test.ipynb  test.py
.github/workflows/: ci.yaml  ml_models_ci.yaml
about/: index.html
autonomy_estimator/: index.html
autonomy_estimator/deployment/: api.py  autonomy_estimator.dockerfile
autonomy_estimator/development/model/: autonomy_estimator.joblib
autonomy_estimator/development/notebooks/: model_creation.ipynb
autonomy_estimator/unit_tests/: testing_api.ipynb  testing_data.parquet
cicd/: index.html
co2_estimator/: index.html
co2_estimator/deployment/: api.py  co2_emissions.dockerfile
co2_estimator/unit_tests/: eval_dataset.parquet  model_evaluation.py  testing_api.ipynb
data_preparation/: index.html
data_sources/: data_preparation.ipynb  vehicle_data_prepared.parquet
deployment/: index.html
docs/: about.md  autonomy_estimator.md  co2_estimator.md  data_preparation.md  deployment.md  index.md  machine_learning.md
include/config/: initial_settings.yaml
include/dashboard/: data_cleaning.ipynb
include/files/: veh_data_schema.json
include/models/: co2_emission_estimator.pkl
include/notebooks/: co2_estimator_model_creation.ipynb  data_cleaning.ipynb
include/scripts/: api.py  co2_estimator_model_evaluation.py  postgres_db_connection.py  testing_api.ipynb
include/sql_queries/: distr_01.sql
machine_learning/: index.html
project/: vehicle_analysis.ipynb
search/: search_index.json
(+6 files in other folders)
