[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Emmanuel Amador <emmanuel_mald@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
sqlalchemy = "^2.0.32"
pyyaml = "^6.0.2"
mkdocs = "^1.6.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

