[tool.poetry]
name = "veh_analysis"
version = "0.1.0"
description = ""
authors = ["Emmanuel Amador <emmanuel_mald@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
sqlalchemy = "^2.0.32"
pyyaml = "^6.0.2"
mkdocs = "^1.6.1"
plotly = "^5.24.0"
dash = "^2.17.1"
nbformat = "^5.10.4"
requests = "^2.32.3"
pyarrow = "^17.0.0"
dash-bootstrap-components = "^1.6.0"
seaborn = "^0.13.2"
mkdocs-swan = "^0.4.0"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

